// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`while using unreact.compileDir() basic: ejs 1`] = `
"<div>
  <div>
    <span></span>
  </div>
</div>

<div></div>
"
`;

exports[`while using unreact.compileDir() basic: pug 1`] = `
"div
  div
    span

div
"
`;

exports[`while using unreact.compileFile() basic: ejs 1`] = `
"<div></div>
"
`;

exports[`while using unreact.compileFile() basic: pug 1`] = `
"div
"
`;
